[package]
name = "rust_lib_noir_flutter_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
smol = "2.0.2"
bincode = "1.3"

noir = { git = "https://github.com/zkmopro/noir-rs", features = [
    "barretenberg",
    "android-compat",
], branch = "v1.0.0-beta.8-3" }

[target.'cfg(target_os = "android")'.dependencies]
cxx = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
